--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,19 @@ ul li a:hover{
 .icons ion-icon:hover{
     color: #615245;
 }
+/* Section */
+.section {
+    padding: 40px 20px;
+    text-align: center;
+}
+
+.section h2 {
+    color: #6f0921;
+    margin-bottom: 25px;
+    font-size: 40px;
+}
+
+.section p {
+    margin-bottom: 25px;
+    font-size: 18px;
+}
