--- a/css/style.css
+++ b/css/style.css
@@ -281,3 +281,65 @@ ul li a:hover{
     margin-bottom: 25px;
     font-size: 18px;
 }
+/* About us */
+.about-highlight {
+    background: #ffe6e6;
+    padding: 15px;
+    margin: 20px auto;
+    border-radius: 10px;
+    max-width: 500px;
+}
+{
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #fff;
+}
+
+.about-us-section {
+    position: relative;
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #ffffff;
+}
+
+.about-us-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(ppaws.png) no-repeat center center; 
+    background-size: contain; 
+    opacity: 0.5; 
+    pointer-events: none; /
+}
+
+.about-us-header {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #6f0921;
+    margin: 0;
+}
+
+.divider {
+    width: 550px;
+    height: 3px;
+    background-color: #2fa86c;
+    margin: 10px auto 30px;
+}
+
+.about-us-content {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #252121;
+    max-width: 700px;
+    margin: 0 auto;
+    position: relative; 
+    z-index: 1;
+}
+
+.about-us-content strong {
+    font-weight: bold;
+}
