--- a/style.css
+++ b/style.css
@@ -421,3 +421,11 @@ text-align: start;
     text-align: right;
     color: #ff6b6b;
 }
+/* Footer */
+.footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 20px;
+}
